--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ClassA:\n",
-    "    public_attribute: str = \"类的公共属性\"\n",
-    "    __private_attribute = \"类的私有属性\"\n",
+    "    public_attribute: str = \"类公共属性\"\n",
+    "    __private_attribute = \"类私有属性\"\n",
     "\n",
-    "    # 实例初始化\n",
+    "    # 实例初始化构造方法\n",
     "    def __init__(self, instance_attribute):\n",
     "        # 给实例对象添加属性 instance_attribute\n",
     "        self.instance_attribute = instance_attribute\n",
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'类的公共属性'"
+       "'类公共属性'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -130,17 +130,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 创建实例\n",
-    "obj_a = ClassA(\"实例属性 A\")"
+    "obj_a = ClassA(\"实例属性 A\")  # 创建实例"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'实例属性 A'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_a.instance_attribute  # 访问实例属性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -152,13 +171,12 @@
     }
    ],
    "source": [
-    "# 执行实例公共方法\n",
-    "obj_a.public_method()"
+    "obj_a.public_method()  # 执行实例公共方法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -166,13 +184,12 @@
      "output_type": "stream",
      "text": [
       "受保护方法虽然约定上视为受保护，但并没有强制限制访问\n",
-      "私有方法仅在类内部可访问 类的私有属性\n"
+      "私有方法仅在类内部可访问 类私有属性\n"
      ]
     }
    ],
    "source": [
-    "# 执行实例受保护方法\n",
-    "obj_a._protected_method()"
+    "obj_a._protected_method()  # 执行实例受保护方法"
    ]
   },
   {
@@ -184,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,28 +259,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClassABChild(ClassA, ClassB):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(instance_attribute=\"父类 A\")\n",
+    "        ClassB.__init__(self, instance_attribute=\"父类 B\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[__main__.ClassABChild, __main__.ClassA, __main__.ClassB, object]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 子类的继承顺序\n",
+    "ClassABChild.mro()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<class '__main__.ClassABChild'>, <class '__main__.ClassA'>, <class '__main__.ClassB'>, <class 'object'>]\n",
       "公共方法\n"
      ]
     }
    ],
    "source": [
-    "class ClassABChild(ClassA, ClassB):\n",
-    "    def __init__(self):\n",
-    "        super().__init__(instance_attribute=\"父类 A\")\n",
-    "        ClassB.__init__(self, instance_attribute=\"父类 B\")\n",
-    "\n",
-    "\n",
-    "# 子类的继承顺序\n",
-    "print(ClassABChild.mro())\n",
-    "\n",
     "obj_ab_child = ClassABChild()\n",
     "obj_ab_child.public_method()"
    ]
