--- a/src/python3_course_for_devs/notebooks/magic_method.ipynb
+++ b/src/python3_course_for_devs/notebooks/magic_method.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# 魔术方法\n",
     "\n",
-    "魔术方法（Magic methods）是具有双下划线（`__`）前缀和后缀的特殊方法。它们用于实现对象的特定行为和操作。\n"
+    "具有双下划线（`__`）前缀和后缀的特殊方法，用于实现对象的特定行为。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,19 +25,13 @@
     "        instance = super().__new__(cls)\n",
     "        return instance\n",
     "\n",
-    "    # 新对象初始化操作\n",
+    "    # 构造器方法，在创建对象时调用\n",
     "    def __init__(self, instance_attribute):\n",
     "        self.instance_attribute = instance_attribute\n",
     "\n",
-    "    # 用于返回对象的人类可读的字符串表示形式。它定义了对象的\"非正式\"字符串表示形式，通常用于用户友好的输出和显示。\n",
-    "    # 当使用方法 str、print 或使用 f-string 格式化时，对象的 __str__ 方法会被自动调用\n",
-    "    # 如果没有定义 __str__，会尝试调用 __repr__\n",
     "    def __str__(self):\n",
     "        return f\"MyClass(instance_attribute='{self.instance_attribute}')\"\n",
     "\n",
-    "    # 提供一个可读性良好且准确描述对象的字符串，通常用于调试和开发过程中。\n",
-    "    # 当使用方法 repr 或在交互式环境中直接输入对象名并执行时，对象的 __repr__ 方法会被自动调用\n",
-    "    # 如果没有定义 __repr__，会尝试调用 __str__\n",
     "    def __repr__(self):\n",
     "        return f\"MyClass('{self.instance_attribute}')\"\n",
     "\n",
@@ -47,6 +41,10 @@
     "\n",
     "    def __len__(self):\n",
     "        return len(self.instance_attribute)\n",
+    "\n",
+    "    # 返回哈希值，instance_attribute 必须是不可变对象\n",
+    "    def __hash__(self):\n",
+    "        return hash(self.instance_attribute)\n",
     "\n",
     "    # __add__\n",
     "    # 定义对象的加法操作\n",
@@ -60,189 +58,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "obj1 = MyClass(\"实例属性 1\")\n",
-    "obj2 = MyClass(\"实例属性 2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MyClass(instance_attribute='实例属性 1')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 测试 __str__\n",
-    "\n",
-    "print(obj1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MyClass('实例属性 1')"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 测试 __repr__\n",
-    "\n",
-    "eval(repr(obj1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"MyClass(instance_attribute='实例属性 1')\""
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 测试 __call__\n",
-    "\n",
-    "obj1()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(obj1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MyClass('实例属性 1实例属性 2')"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 测试 __add__\n",
-    "\n",
-    "obj1 + obj2"
+    "obj_a = MyClass(\"实例 A\")\n",
+    "obj_b = MyClass(\"实例 B\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 迭代器 & 可迭代对象\n",
+    "**`__str__`**\n",
     "\n",
-    "有关[迭代器和可迭代对象]('./iterator_generator.ipynb')的魔术方法\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 类型转换相关\n",
-    "\n",
-    "- `__str__(self)`: 该方法用于返回对象的字符串表示形式，通常用于`str`函数和打印对象时的类型转换。\n",
-    "- `__repr__(self)`: 该方法用于返回对象的可打印字符串表示形式，通常用于`repr`函数和在交互式命令行中显示对象时的类型转换。\n",
-    "- `__int__(self)`: 该方法用于将对象转换为整数类型，通常用于`int`函数的类型转换。\n",
-    "- `__float__(self)`: 该方法用于将对象转换为浮点数类型，通常用于`float`函数的类型转换。\n",
-    "- `__bool__(self)`: 该方法用于将对象转换为布尔类型，通常用于`bool`函数和条件语句中的类型转换。\n",
-    "\n",
-    "以下是一个示例代码，展示了如何使用这些类型转换魔术方法：\n"
+    "返回对象字符串表示形式，强调可读性。\n",
+    "可使用 `str`、`print` 方法或 `f-string` 调用。如果没有 `__str__` 则尝试调用 `__repr__`。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"MyClass(instance_attribute='实例 A')\""
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(obj_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "MyNumber(10)\n",
-      "10\n",
-      "10.0\n",
-      "True\n"
+      "MyClass(instance_attribute='实例 A')\n"
      ]
     }
    ],
    "source": [
-    "class MyNumber:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
+    "print(obj_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"MyClass(instance_attribute='实例 A')\""
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"{obj_a}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`__repr__`**\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return str(self.value)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"MyNumber({self.value})\"\n",
-    "\n",
-    "    def __int__(self):\n",
-    "        return int(self.value)\n",
-    "\n",
-    "    def __float__(self):\n",
-    "        return float(self.value)\n",
-    "\n",
-    "    def __bool__(self):\n",
-    "        return bool(self.value)\n",
-    "\n",
-    "\n",
-    "num = MyNumber(10)\n",
-    "\n",
-    "# 调用类型转换方法\n",
-    "print(str(num))  # 输出：'10'\n",
-    "print(repr(num))  # 输出：MyNumber(10)\n",
-    "print(int(num))  # 输出：10\n",
-    "print(float(num))  # 输出：10.0\n",
-    "print(bool(num))  # 输出：True"
+    "返回对象字符串表示形式，强调准确并可用于重新创建对象，通常用于开发调试。\n",
+    "可使用 `repr` 方法或在交互式环境中直接执行对象名调用。如果没有 `__repr__` 则尝试调用 `__str__`。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyClass('实例 A')"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyClass('实例 A')"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(repr(obj_a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`__call__`**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"MyClass(instance_attribute='实例 A')\""
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_a()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`__len__`**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(obj_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`__add__`**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyClass('实例 A实例 B')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj_a + obj_b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`__hash__`**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2999934030986681404"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash(obj_a)"
    ]
   }
  ],
