--- a/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/Iterator_generator.ipynb
@@ -13,9 +13,7 @@
    "source": [
     "## 迭代器\n",
     "\n",
-    "迭代器（Iterator）是一种对象，它允许按照一定顺序逐个访问集合或序列中的元素，而不需要事先知道整个集合的内容。迭代器提供了一种惰性计算（lazy evaluation）的方式，只在需要时生成或提供下一个元素。\n",
-    "\n",
-    "迭代器既可以通过循环遍历，也可以通过 `next` 方法逐个访问元素。\n",
+    "迭代器是实现了 `__iter__` 与 `__next__` [魔术方法](./magic_method.ipynb) 的类对象。既可以使用循环遍历迭代器，也可以使用 `next` 方法逐个访问迭代器元素。\n",
     "\n",
     "`iter` 方法可以生成一个可迭代对象的迭代器。\n"
    ]
@@ -117,7 +115,7 @@
     "\n",
     "可迭代对象是指内部实现了迭代器协议的对象。\n",
     "\n",
-    "迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
+    "> 迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
     "\n",
     "> 内置方法 `iter` 通过调用 `__iter__` 返回可迭代对象的迭代器对象。\n"
    ]
@@ -213,7 +211,7 @@
    "source": [
     "## 生成器\n",
     "\n",
-    "生成器（Generator）是一种特殊的迭代器，它使用函数的形式来定义，通过 yield 语句产生值。生成器函数可以暂停执行并在需要时恢复执行，从而实现按需生成值的效果。\n",
+    "生成器是一种特殊的迭代器，它使用函数的形式来定义，通过 `yield` 语句产生值。生成器函数可以暂停执行并在需要时恢复执行，从而实现按需生成值的效果。\n",
     "\n",
     "相比迭代器，生成器更简洁，更易于维护。\n"
    ]
