--- a/src/python3_course_for_devs/notebooks/exception.ipynb
+++ b/src/python3_course_for_devs/notebooks/exception.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 断言\n",
+    "## 异常断言\n",
     "\n",
-    "断言语句 `assert` 遇到[假值]('./bool.ipynb')则抛 `AssertionError` 异常\n",
+    "断言语句 `assert` 遇 [假]('./bool.ipynb') 则抛 `AssertionError` 异常。\n",
     "\n",
     "`assert expression`\n",
     "\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -50,11 +50,10 @@
     }
    ],
    "source": [
-    "# 由于 1 != True 为假，所以断言抛出异常，在 try except 中捕获异常，并打印断言异常的携带信息\n",
     "try:\n",
     "    assert 1 != True, \"布尔型是整型的子类型\"\n",
-    "except AssertionError as err:\n",
-    "    print(err)"
+    "except AssertionError as msg:\n",
+    "    print(msg)"
    ]
   },
   {
@@ -63,39 +62,39 @@
    "source": [
     "## 主动抛异常\n",
     "\n",
-    "使用 `raise` 语句可以主动抛出一个异常\n"
+    "使用 `raise` 语句主动抛异常。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "raise 默认抛出一个 RuntimeError\n"
+      "捕获异常\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    raise\n",
+    "    raise  # raise 默认抛 RuntimeError 异常\n",
     "except RuntimeError:\n",
-    "    print(\"raise 默认抛出一个 RuntimeError\")"
+    "    print(\"捕获异常\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注意：`raise` 语句如果在 `except` 中，那么将会抛出当前捕获的异常，而不一定是 `RuntimeError`\n"
+    "> `raise` 语句如果在 `except` 中，那么将会抛出当前捕获的异常。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -113,8 +112,8 @@
     "    except:\n",
     "        # except 里的 raise 将当前捕获到的 TypeError 直接抛到外层\n",
     "        raise\n",
-    "except TypeError as err:\n",
-    "    print(err)"
+    "except TypeError as msg:\n",
+    "    print(msg)"
    ]
   },
   {
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -142,10 +141,11 @@
     "try:\n",
     "    raise TypeError(\"抛异常\")\n",
     "\n",
-    "except TypeError as err:\n",
-    "    print(\"异常信息捕获\", err)\n",
+    "except TypeError as msg:  # 携带异常信息\n",
+    "    print(\"异常信息捕获\", msg)\n",
     "\n",
-    "except (ValueError, NameError):\n",
+    "\n",
+    "except (ValueError, NameError):  # 多异常捕获\n",
     "    print(\"多异常捕获\")\n",
     "\n",
     "except:\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
