--- a/src/python3_course_for_devs/notebooks/module.ipynb
+++ b/src/python3_course_for_devs/notebooks/module.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 模块\n",
     "\n",
-    "一个 Python 文件被视为一个模块，比如 `main.py`\n"
+    "一个 Python 文件就是一个模块，比如 `main.py`\n"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,12 @@
    "source": [
     "#### `import ... as ...`\n",
     "\n",
-    "导入模块并为模块指定一个别名。简化模块名的使用。\n"
+    "导入模块并为模块指定一个别名。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,16 +124,16 @@
    "source": [
     "#### `from ... import *`\n",
     "\n",
-    "将模块中的所有函数、变量和类引入到当前命名空间中，可以直接在代码中使用它们，而无需使用模块名作为前缀。\n",
+    "将模块中的所有函数、变量和类引入到当前 [命名空间](./scope.ipynb) 中，可以直接在代码中使用它们，而无需使用模块名作为前缀。\n",
     "\n",
     "当模块定义了 `__all__` 变量时，使用 `from ... import *` 语句只会导入 `__all__` 列表中指定的变量、函数和类。\n",
     "\n",
-    "注意：这种方式可能会导致命名冲突，应尽量避免使用。\n"
+    "> 这种方式可能会导致命名冲突，应尽量避免使用。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "'binghuis'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " '/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "# 搜索路径的列表\n",
+    "# 模块搜索路径\n",
     "sys.path"
    ]
   },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "'python3_course_for_devs.main'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,18 +228,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `__name__` & `\"__main__\"`\n",
+    "**`__name__` & `\"__main__\"`**\n",
     "\n",
-    "`__name__` 是一个内置变量，用于表示当前模块的名称。\n",
+    "- `__name__` 是一个内置变量，用于表示当前模块的名称。\n",
+    "- `__main__` 是一个特殊的字符串，用于表示当前执行的模块的名称。当一个模块直接作为脚本被执行时，其 `__name__` 变量的值将被设置为 `__main__`。\n",
     "\n",
-    "`__main__` 是一个特殊的字符串，用于表示当前执行的模块的名称。当一个模块直接作为脚本被执行时，其`__name__`变量的值将被设置为`__main__`。\n",
-    "\n",
-    "通过将特定的代码逻辑包装在`if __name__ == \"__main__\":`条件语句中，可以确保这部分代码只在模块直接执行时运行，而在导入时不运行。\n"
+    "通过将特定的代码逻辑包装在 `if __name__ == \"__main__\"` 条件语句中，可以确保这部分代码只在模块直接执行时运行，而在导入时不运行。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
