--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "在整个程序中可见的作用域。全局作用域中定义的标识符都存在全局命名空间中。\n",
     "\n",
-    "> 程序的基本执行单位是模块（Module）。\n",
+    "> 程序的基本执行单位是 [模块（Module）](./module.ipynb)。\n",
     "\n",
     "> 模块是一个包含了 Python 可执行代码的文件。\n"
    ]
