--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -169,11 +169,9 @@
             "source": [
                 "### 可迭代性\n",
                 "\n",
-                "可迭代是指对象可被迭代器遍历。\n",
+                "可遍历。\n",
                 "\n",
-                "字符串、元组、列表、集合和字典都是可迭代的。\n",
-                "\n",
-                "详细介绍看[迭代器 & 可迭代对象 & 生成器](./iterator_generator.ipynb)\n"
+                "字符串、元组、列表、集合和字典都是 [可迭代对象](./iterator_generator.ipynb)。\n"
             ]
         },
         {
@@ -307,7 +305,7 @@
                 "\n",
                 "元组、列表、集合和字典都是容器类型。\n",
                 "\n",
-                "序列类型除了字符串都是容器类型，字符串虽不算容器类型，但它却支持很多容器类型的特性。\n",
+                "> 字符串虽不是容器类型，但却具有很多容器类型特性。\n",
                 "\n",
                 "容器类型的一些共同特性（以下特性字符串同样支持）：\n",
                 "\n",
