--- a/src/python3_course_for_devs/notebooks/iterator_generator.ipynb
+++ b/src/python3_course_for_devs/notebooks/iterator_generator.ipynb
@@ -13,50 +13,16 @@
    "source": [
     "## 迭代器\n",
     "\n",
-    "迭代器是实现了 `__iter__` 与 `__next__` [魔术方法](./magic_method.ipynb) 的类对象。既可以使用循环遍历迭代器，也可以使用 `next` 方法逐个访问迭代器元素。\n",
+    "迭代器是实现了 `__iter__` 与 `__next__` [魔术方法](./magic_method.ipynb) 的类对象。`__iter__` 方法返回迭代器对象本身，而 `__next__` 方法返回迭代器的下一个元素。如果没有更多的元素可供迭代，`__next__` 方法则引发 `StopIteration` 异常，指示迭代结束。\n",
     "\n",
-    "`iter` 方法可以生成一个可迭代对象的迭代器。\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "迭代器遍历完成\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    # 生成一个列表的迭代器\n",
-    "    it = iter([1, 2, 3, 4])\n",
-    "\n",
-    "    # 循环遍历迭代器\n",
-    "    for item in it:\n",
-    "        print(item)\n",
-    "\n",
-    "    # 通过 next 方法获取迭代器元素，由于循环已经将迭代器迭代完，所以此时没有元素可迭代，会引发 StopIteration 异常\n",
-    "    next(it)\n",
-    "except StopIteration:\n",
-    "    print(\"迭代器遍历完成\")"
+    "> 迭代器既可以使用循环遍历，也可以使用 `next` 方法逐个访问元素。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 自定义迭代器\n",
-    "\n",
-    "迭代器类需要实现两个方法 `__iter__` 与 `__next__`，`__iter__` 返回迭代器对象本身，`__next__` 返回迭代器中的下一个元素，当迭代器中没有元素可供返回时，`__next__` 应引发 `StopIteration` 异常，指示迭代的结束。\n",
+    "**自定义迭代器**\n",
     "\n",
     "当使用循环遍历迭代器时，循环会自动调用 `__next__` 方法来获取下一个元素，直到迭代结束。\n"
    ]
@@ -115,9 +81,9 @@
     "\n",
     "可迭代对象是指内部实现了迭代器协议的对象。\n",
     "\n",
-    "> 迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器对象。\n",
+    "> 迭代器协议要求对象提供 `__iter__` 方法，该方法返回一个迭代器。\n",
     "\n",
-    "> 内置方法 `iter` 通过调用 `__iter__` 返回可迭代对象的迭代器对象。\n"
+    "> 内置方法 `iter` 通过调用 `__iter__` 返回可迭代对象的迭代器。\n"
    ]
   },
   {
@@ -165,11 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "字典（Dictionary）：字典（dict）对象也是可迭代的。在迭代字典时，默认情况下会按照键（key）的顺序逐个返回键值对（key-value pair）。\n",
-    "\n",
-    "文件对象（File Object）：打开的文件对象也是可迭代的。在迭代文件对象时，会逐行返回文件的内容。\n",
-    "\n",
-    "生成器（Generator）\n"
+    "**一些可迭代对象**\n"
    ]
   },
   {
@@ -189,20 +151,14 @@
     }
    ],
    "source": [
-    "# 一些可迭代对象\n",
-    "\n",
+    "str.__iter__  # 字符串\n",
+    "list.__iter__  # 列表\n",
+    "tuple.__iter__  # 元组\n",
     "\n",
     "set.__iter__  # 集合\n",
     "frozenset.__iter__  # 冻结集合\n",
     "\n",
-    "dict.__iter__  # 字典\n",
-    "bytearray.__iter__  # 字节数组\n",
-    "bytes.__iter__  # 字节串\n",
-    "\n",
-    "# 序列\n",
-    "str.__iter__  # 字符串\n",
-    "tuple.__iter__  # 元组\n",
-    "list.__iter__  # 列表"
+    "dict.__iter__  # 字典"
    ]
   },
   {
@@ -211,9 +167,9 @@
    "source": [
     "## 生成器\n",
     "\n",
-    "生成器是一种特殊的迭代器，它使用函数的形式来定义，通过 `yield` 语句产生值。生成器函数可以暂停执行并在需要时恢复执行，从而实现按需生成值的效果。\n",
+    "生成器是一种特殊的迭代器，它使用函数的形式来定义，通过 `yield` 语句产生值。生成器函数可以暂停执行并在需要时恢复执行，从而实现按需生成值。\n",
     "\n",
-    "相比迭代器，生成器更简洁，更易于维护。\n"
+    "相比迭代器，生成器更简洁。\n"
    ]
   },
   {
