--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "{'foo': 5, 2: 28, ('bar', 8): 't'}"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "{'a': 1, (1, 2): 2}"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "{(1, 2): 2, 'a': 1}"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "{'a': 1, (1, 2): 2}"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "{1: '统一的默认值', '4': '统一的默认值'}"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,12 +166,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> `zip` 方法可将多个可迭代对象组成一个由元组组成的迭代器，每个元组的元素来自每个可迭代对象的对应位置。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, '(1,2)': 2}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip([\"a\", \"(1,2)\"], [1, 2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 一些字典操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +223,7 @@
        "{'a': 1, 'b': '不存在则设置这行字'}"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +244,7 @@
        "{'a': 1, 'b': '不存在则设置这行字', 'c': 3, 'd': 4}"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +272,7 @@
        "1"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +299,7 @@
        "1"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +319,7 @@
        "('d', 4)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +373,7 @@
        "dict_keys(['a', 'b'])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +400,7 @@
        "dict_values([1, 2])"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +427,7 @@
        "dict_items([('a', 1), ('b', 2)])"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +454,7 @@
        "[('a', 1), ('b', 2)]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +474,7 @@
        "(('a', 1), ('b', 2))"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +494,7 @@
        "{('a', 1), ('b', 2)}"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
