--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -57,7 +57,7 @@
                 "\n",
                 "  数字、字符串和元组都是不可变对象类型。\n",
                 "\n",
-                "> 可变对象和不可变对象在进行复制操作时表现不同。请看 [深拷贝 & 浅拷贝](./copy.ipynb)\n",
+                "> 可变对象和不可变对象在进行复制操作时表现不同。请看 [深拷贝 & 浅拷贝](./copy.ipynb)。\n",
                 "\n",
                 "> 通过 `id` 方法可获得对象的内存标识。\n"
             ]
